Fix WizardModal's padding and z-index

--- a/src/fullPageBookingForm/Components/Common/WizardModal/WizardModal.scss
+++ b/src/fullPageBookingForm/Components/Common/WizardModal/WizardModal.scss
@@ -11,6 +11,7 @@
   left: 0;
   transition: all 0.4s ease;
   overflow-y: auto;
+  z-index: 999;
 }
 
 .wizard-modal__close-button {
@@ -54,8 +55,7 @@
 .wizard-modal__body {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 40px 30px;
-  overflow-y: auto;
+  padding-top: 90px;
   position: relative;
 }
 
